<resources>
    <string name="app_name">HumidTemp</string>
    <string name="temperature">Temperature :</string>
    <string name="humidity">Humidity :</string>">
    <string name="connectingToDevice">Connecting To Device...</string>">
    <string name="connected">Connected!</string>">
    <string name="connectionLost">Connection Lost!</string>">
    <string name="disconnected">Disconnected!</string>">
    <string name="empty">NULL</string>">
    <string name="pressToConnect">Press to connect</string>">
    <string name="pressToDisconnect">Press to Disconnect</string>">
</resources>