<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/black"
    android:padding="16dp">

    <TextView
        android:visibility="gone"
        android:id="@+id/txtLoading"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/digital"
        tools:text="@string/connectingToDevice"
        android:textColor="@color/green"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/digital"
            android:text="@string/temperature"
            android:textColor="@color/green"
            android:textSize="32sp" />

        <TextView
            android:id="@+id/txtTemp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/digital"
            android:gravity="center"
            android:text="@string/empty"
            android:textColor="@color/green"
            android:textSize="64sp" />

        <TextView
            android:id="@+id/txtHumidityTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:fontFamily="@font/digital"
            android:text="@string/humidity"
            android:textColor="@color/green"
            android:textSize="32sp" />

        <TextView
            android:id="@+id/txtHumidity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/digital"
            android:gravity="center"
            android:text="@string/empty"
            android:textColor="@color/green"
            android:textSize="64sp" />

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/btnConnect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/green"
        android:text="@string/pressToConnect"
        android:textColor="@android:color/white"
        app:icon="@drawable/link"
        app:iconTint="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
